<resources>
    <string name="app_name">AA_app</string>
    <string name="title_activity_home" translatable="false">HomeActivity</string>
    <string name="title_activity_reaction" translatable="false">ReactionActivity</string>
    <string name="title_profile">Profile</string>
    <string name="title_emergency_call">Emergency Call</string>
    <string name="title_reaction">Reaction</string>
    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="action_language">Language</string>
    <string name="action_data_protection">Data Protection</string>
    <string name="action_settings">Settings</string>

    <string name="symptom_selection">Symptom Selection</string>
    <string name="skin">Skin</string>
    <string name="gastro_intestinal">Gastro-Intestinal</string>
    <string name="cardiovascular">Cardiovascular</string>
    <string name="dizziness">Dizziness</string>
    <string name="runny_nose">Runny Nose</string>
    <string name="airways">Airways</string>
    <string name="no_idea">I don\'t know</string>
    <string name="panic">Indefinable Dread</string>
    <string name="no_symptoms">No symptoms selected</string>
    <string name="choose_symptoms">Select symptoms</string>
    <string name="diarrhea">Diarrhea</string>
    <string name="abdominal_pain">Abdominal Pain</string>
    <string name="vomiting">Vomiting</string>
    <string name="tingling_mouth_throat">Tingling in Mouth or Throat</string>
    <string name="nausea">Nausea</string>

    <string name="create_profile">Create Profile</string>
    <string name="no_profile">No profile created yet</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="profile_name">Profile Name</string>
    <string name="birthday">Birthday</string>
    <string name="gender">Gender</string>
    <string name="known_allergens">Known Allergens</string>
    <string name="asthma">Asthma</string>
    <string name="emergency_set">Emergency Set</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="diverse">diverse</string>
    <string name="product_name">Product Name</string>
    <string name="dosage">Dosage</string>
    <string name="antihistamine">Antihistamine</string>
    <string name="steroid">Steroid</string>
    <string name="autoinjector">Autoinjector</string>
    <string name="salbutamol">Salbutamol</string>
    <string name="enter_name">Enter your name</string>
    <string name="enter_birthday" translatable="false">TT.MM.JJJJ</string>
    <string name="title_activity_maps_example">Map</string>
    <string name="lorem" translatable="false">Lorem</string>
    <string name="treatment">Treatment</string>
    <string name="information">Information</string>
    <string name="select">Select</string>
    <string name="swollen_lip_face">Swollen Lip and/or Face</string>
    <string name="pruritus">Pruritus (palms/ soles/ genital area)</string>
    <string name="wheals">Wheals</string>
    <string name="info_abdominal_pain">Sudden pain in belly space.</string>
    <string name="info_rash">Wheals are reddish-red spots on the skin, such as those that occur after touching nettle, for example. The white-red appearance is typical. Often the wheals first appear on the face, stomach, or back. They itch.</string>
    <string name="info_swelling">" The swelling often begins on the lips or eyelids."</string>
    <string name="info_tingling">Often occurs after the smallest amount of an allergen and immediately after consumption.</string>
    <string name="info_nausea">info nausea</string>
    <string name="difficulty_in_breathing">" Difficulty in Breathing"</string>
    <string name="hoarseness">Sudden Hoarseness</string>
    <string name="wheezing">Wheezing</string>
    <string name="cough">Cough</string>
    <string name="info_difficulty_in_breathing">info breathing</string>
    <string name="info_wheezing">to be translated</string>
    <string name="info_vomiting">" Typical is gushing vomiting without diarrhea or fever. Vomiting can occur immediately after consuming an allergen or only some time (up to 4 hours) later."</string>
    <string name="blood_pressure_drop">" Blood Pressure Drop"</string>
    <string name="unconsciousness">Unconsciousness</string>
    <string name="info_blood_pressure_drop">" If, for no other reason, your child suddenly becomes very limp and wants to lie down, you can assume that his blood pressure has dropped even without a measuring device. If your child is also pale, this is another indication of a drop in blood pressure."</string>
    <string name="fear">Indefinite Feeling of Fear</string>
    <string name="info_wheals">"Wheals are reddish-red spots on the skin, such as those that occur after touching nettle, for example. The white-red appearance is typical. Often the wheals first appear on the face, stomach, or back. They itch. "</string>
    <string name="info_swollen_lip">" The swelling often begins on the lips or eyelids."</string>
    <string name="info_pruritus">" If your child has eczema, the areas affected by eczema begin to itch first."</string>
    <string name="edit_profile">Edit Profile</string>

    <string name="milk">Milk</string>
    <string name="chicken_egg">Chicken Egg</string>
    <string name="wheat">Wheat</string>
    <string name="dinkel_wheat">Dinkel Wheat</string>
    <string name="legumes">Legumes</string>
    <string name="edible_nuts">Edible Nuts</string>
    <string name="fish">Fish</string>
    <string name="crustaceans">Crustaceans</string>
    <string name="mollusk">Mollusk</string>
    <string name="lupine">Lupine</string>
    <string name="celery">Celery</string>
    <string name="mustard">Mustard</string>
    <string name="sesame_seed">Sesame Seed</string>
    <string name="pine_nuts">Pine Nuts</string>
    <string name="sunflower_seeds">Sunflower Seeds</string>
    <string name="poppy">Poppy</string>
    <string name="rice">Rice</string>
    <string name="corn">Corn</string>
    <string name="apples">Apples</string>
    <string name="peach">Peach</string>
    <string name="strawberries">Strawberries</string>
    <string name="bananas">Bananas</string>
    <string name="apricot">Apricot</string>
    <string name="plum">Plum</string>
    <string name="tomato">Tomato</string>
    <string name="pineapple">Pineapple</string>
    <string name="grapes">Grapes</string>
    <string name="cherry">Cherry</string>
    <string name="data_security">Data Protection</string>
    <string name="info_data_security">"Every time this application is accessed, it collects various general data and information that is stored in so-called log files on the server. These data include, for example, your IP address, your operating system, the date and time access to this application and your Internet service provider. The data is processed on the basis of Art. 6 I lit. b) GDPR. According to this provision, the processing of personal data is necessary to fulfill a contract to which you are a party or to carry out pre-contractual measures. By using this application, you are tacitly accepting our offer to conclude a corresponding (free) usage contract. Incidentally, processing is also possible under Art. 6 I lit. f) GDPR justified because we have a legitimate interest in processing and your interests, fundamental rights and freedoms do not outweigh them. The interest is to properly deliver this application and to protect the functionality of our systems. "</string>
    <string name="info_diarrhea">Water-thin diarrhea is typical without a fever beforehand. Accompanying abdominal pain is often observed.</string>
    <string name="info_itching">" Starts in the palms of the hands, soles of the feet and the genital area."</string>
    <string name="step">Step %1$d</string>
    <string name="continue_">Continue</string>
    <string name="your_symptom_selection">You selected the following symptoms</string>
    <string name="what_todo">What has to be done now?</string>
    <string name="further_information">Further Information</string>

    <string name="starting_reaction">Possible Starting Reaction</string>
    <string name="dangerous_reaction">Severe Reaction</string>
    <string name="stay_calm">Calm down.</string>
    <string name="treatment_green_medicine">Give the patient:\n
        - antihistamine %1$s <b>%2$s</b>\n
        - steroid %3$s <b>%4$s</b></string>
    <string name="treatment_red_medicine">"Inject the Autoinjector %1$s."</string>
    <string name="after_treatment_green">Keep the autoinjector %1$s around and call the
        emergency call service when in doubt.</string>
    <string name="after_treatment_red">Call the emergency call service.</string>
    <string name="back_to_selection">Back to selection</string>
    <string name="min_symptom">You need to select at least one symptom.</string>
    <string name="find_safe_place">Find a safe place to call from.</string>
    <string name="keep_autoinjector_ready">Keep the autoinjector ready.</string>
    <string name="which">WHICH</string>
    <string name="how">HOW</string>
    <string name="what">WHAT</string>
    <string name="where">WHERE</string>
    <string name="wait">WAIT</string>
    <string name="you_are_here">You are here</string>
    <string name="anaphylaxis">Anaphylaxis</string>
    <string name="first_aid_for">First aid for</string>
    <string name="powered_by" translatable="false">Powered By</string>
    <string name="charite" translatable="false">Charité</string>
    <string name="htw" translatable="false">HTW</string>
    <string name="required_profile">You have to create a profile first.</string>
</resources>
