<?xml version="1.0" encoding="utf-8"?>
<com.example.olga.aa_app.BaseView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:base_color="@color/colorProjektGreen"
    app:icon="@drawable/icons8_hospital_96"
    app:tint="@color/white"
    app:title="@string/title_reaction">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_margin"
            android:paddingRight="@dimen/activity_margin"
            android:paddingBottom="@dimen/activity_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/default_margin"
                android:background="@drawable/border_box"
                android:backgroundTint="@color/colorProjektGreen"
                android:backgroundTintMode="add"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_margin"
                    android:text="@string/no_symptoms"
                    android:textAlignment="center"

                    android:textColor="@android:color/black"

                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button2"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorProjektGreen"
                    android:onClick="onClick"
                    android:padding="@dimen/default_margin"
                    android:text="@string/choose_symptoms"
                    android:textSize="@dimen/paragraph" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</com.example.olga.aa_app.BaseView>